# word_document_master_tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit_report.md  excel_pdf_export.md  final_report.md  gui_reference_vba_mapping.md  gui_ux_improvement_plan.md  production_gap_analysis.md  stabilization_report.md
src/word_document_master_tool/: cli.py
src/word_document_master_tool/core/: execution_plan.py  logging_service.py  models.py
src/word_document_master_tool/excel/: __init__.py  excel_app.py  excel_pdf_export_service.py
src/word_document_master_tool/filesystem/: discovery.py  paths.py
src/word_document_master_tool/gui/: app.py  controller.py  main_window.py  state.py
src/word_document_master_tool/gui/widgets/: document_table.py  folder_widgets.py
src/word_document_master_tool/pdf/: pdf_export_coordinator.py  pdf_export_service.py  pdf_merge_service.py
src/word_document_master_tool/word/: footnote_service.py  marker_service.py  merge_service.py  page_numbering_service.py  source_processing_service.py  split_service.py  superscript_scanner.py  word_app.py
tests/: test_discovery_excel.py  test_excel_pdf_export_mock.py  test_execution_plan.py  test_execution_plan_excel.py  test_filesystem.py  test_gui_imports.py  test_logging.py  test_models.py  test_pdf_merge.py  test_word_mock.py
